force-app/main/default/objects/Documentacao__c/Documentacao__c.object-meta.xml
<CustomObject>
    <description>Documentação de contato</description>
    <label>Documentação</label>
    <nameField>
        <label>Nome de Documentação</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>