force-app/main/default/objects/Documentacao__c/fields/AnaliseCredito__c.field-meta.xml
<CustomField>
    <fullName>AnaliseCredito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Análise de Crédito</label>
    <referenceTo>AnaliseCredito__c</referenceTo>
    <relationshipLabel>Documentos</relationshipLabel>
    <relationshipName>Documenta_es</relationshipName>
    <type>Lookup</type>
</CustomField>