force-app/main/default/objects/Documentacao__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Documentações</relationshipLabel>
    <relationshipName>Documentacoes</relationshipName>
    <type>Lookup</type>
</CustomField>