force-app/main/default/objects/Documentacao__c/fields/ContentDocumentId_c__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId_c__c</fullName>
    <label>ContentDocumentId__c</label>
    <type>TextArea</type>
</CustomField>