force-app/main/default/objects/Documentacao__c/fields/DataEntrega__c.field-meta.xml
<CustomField>
    <fullName>DataEntrega__c</fullName>
    <description>Data de Entrega do documento</description>
    <label>Data Entrega</label>
    <type>Date</type>
</CustomField>