force-app/main/default/objects/Documentacao__c/fields/Validado__c.field-meta.xml
<CustomField>
    <fullName>Validado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Descreve se o documento foi ou está validado ou não.</description>
    <label>Validado</label>
    <type>Checkbox</type>
</CustomField>